k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: msc-de1-project
  labels:
    app.kubernetes.io/name: flask-sample-app
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: msc-de1-project
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: flask-sample-app
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
